# screen

./: .gitignore  Cargo.toml  README.md  build.rs  dytes.json  screen.cfg
.github/workflows/: linux.yml  mac.yml  release.yml  win.yml
assets/: index.html
examples/: load_plugin.rs  plugin_add.rs
fxdb/: sensor.db  usersetting.db
plugin_demo/comport/: Cargo.toml
plugin_demo/comport/coms/: lib.rs
plugin_demo/comport/src/: lib.rs
plugin_demo/get_add/: Cargo.toml
plugin_demo/get_add/src/: lib.rs
plugin_demo/slideudp/: Cargo.toml
plugin_demo/slideudp/src/: lib.rs
sh/: get_comport.py  readme.md  set_comport.py  startup.bat  startup.sh  vindu_hide.py  vindu_show.py
src/: main.rs
src/apis/: api.rs  auth.rs  light.rs  mod.rs  sensor.rs  slide.rs
src/app/: browser.rs  fxevent.rs  handler.rs  mimetype.rs  mod.rs  runtime.rs  vindu.rs
src/application/: app.rs  browser.rs  event.rs  handler.rs  mimetype.rs  mod.rs  vindu.rs
src/core/: app.rs  mod.rs  pid.rs
src/platform/: linux.rs  macos.rs  mod.rs  windows.rs
src/service/: mod.rs  sensor.rs
src/sys_task/: init.rs
src/types/: design_space.rs  design_version.rs  info.rs  mod.rs
src/utils/: ip.rs
