[package]
name = "screen"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.58", features = ["derive"] }
ctrlc = "3.5.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
image = "0.25.6"
http = "1.3.1"
http-range = "0.1.5"
xrutes = "0.1.2"
get_if_addrs = "0.5.3"
libloading = "0.9.0"
wry = "0.54.2"
winit = "0.30.12"

# ---------- 平台相关 ----------
[target.'cfg(target_os = "windows")'.dependencies]
winres = "0.1"

[target.'cfg(target_os = "macos")'.dependencies]


[target.'cfg(target_os = "linux")'.dependencies]
gtk = "0.18"

